[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/core/BaseControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/core/ActionChoice.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/sheets/portraits.png" type="Texture" id=3]
[ext_resource path="res://src/core/BaseDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/ui/back.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/coin.png" type="Texture" id=6]
[ext_resource path="res://src/map/Shop.gd" type="Script" id=7]
[ext_resource path="res://assets/images/ui/tag.png" type="Texture" id=8]

[node name="Shop" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="Banner" type="ColorRect" parent="BG" index="0"]
anchor_right = 1.0
margin_bottom = 9.0
color = Color( 0.145098, 0.145098, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/Banner" index="0"]
margin_left = -1.0
margin_top = -3.0
margin_right = 46.0
margin_bottom = 11.0
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="BG" index="1"]
position = Vector2( 64, 5 )
texture = ExtResource( 3 )
centered = false
flip_h = true
vframes = 4
hframes = 7
frame = 5

[node name="SpeakerName" type="Label" parent="BG" index="2"]
margin_left = -1.0
margin_top = 8.0
margin_right = 69.0
margin_bottom = 22.0
text = "Merchant"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" type="Label" parent="BG" index="3"]
margin_left = 2.0
margin_top = 18.0
margin_right = 73.0
margin_bottom = 48.0
custom_constants/line_spacing = 2
text = "Welcome. See anything you like?"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="VBoxContainer" parent="BG" index="4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -45.0
margin_right = 43.0
margin_bottom = 25.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassActions" type="Button" parent="BG/Choices" index="0"]
margin_right = 85.0
margin_bottom = 13.0
rect_min_size = Vector2( 80, 13 )
text = "Sorcerer Actions"

[node name="OtherActions" type="Button" parent="BG/Choices" index="1"]
margin_top = 19.0
margin_right = 85.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 13 )
text = "Other Actions"

[node name="Sundries" type="Button" parent="BG/Choices" index="2"]
margin_top = 38.0
margin_right = 85.0
margin_bottom = 51.0
rect_min_size = Vector2( 80, 13 )
disabled = true
text = "Items & Trinkets"

[node name="Exit" type="Button" parent="BG/Choices" index="3"]
margin_top = 57.0
margin_right = 85.0
margin_bottom = 70.0
rect_min_size = Vector2( 80, 13 )
text = "Exit"

[node name="ActionDialog" parent="BG" index="5" instance=ExtResource( 4 )]

[node name="Banner" type="ColorRect" parent="BG/ActionDialog" index="2"]
anchor_right = 1.0
margin_bottom = 9.0
color = Color( 0.145098, 0.145098, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/ActionDialog/Banner" index="0"]
margin_left = -1.0
margin_top = -3.0
margin_right = 46.0
margin_bottom = 11.0
text = "Actions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="VBoxContainer" parent="BG/ActionDialog" index="3"]
margin_left = 2.0
margin_top = 12.0
margin_right = 100.0
margin_bottom = 160.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionChoice" parent="BG/ActionDialog/Actions" index="0" instance=ExtResource( 2 )]
margin_left = 0.0

[node name="ActionChoice2" parent="BG/ActionDialog/Actions" index="1" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 19.0
margin_bottom = 34.0

[node name="ActionChoice3" parent="BG/ActionDialog/Actions" index="2" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 38.0
margin_bottom = 53.0

[node name="ActionChoice4" parent="BG/ActionDialog/Actions" index="3" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 57.0
margin_bottom = 72.0

[node name="ActionChoice5" parent="BG/ActionDialog/Actions" index="4" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 76.0
margin_bottom = 91.0

[node name="Back" type="Button" parent="BG/ActionDialog" index="4"]
margin_left = 1.0
margin_top = 108.0
margin_right = 41.0
margin_bottom = 121.0
text = "Back"
icon = ExtResource( 5 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="BG/ActionDialog" index="5"]
margin_left = 46.0
margin_top = 108.0
margin_right = 107.0
margin_bottom = 121.0
disabled = true
text = "Buy"
icon = ExtResource( 6 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="BG/ActionDialog/Buy" index="0"]
visible = false
margin_left = 28.0
margin_top = -1.0
margin_right = 58.0
margin_bottom = 13.0
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="BG/ActionDialog/Buy/Cost" index="0"]
position = Vector2( 26, 5 )
texture = ExtResource( 6 )
centered = false

[node name="PriceTag" type="Sprite" parent="BG/ActionDialog" index="6"]
position = Vector2( 79, 20 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite" type="Sprite" parent="BG/ActionDialog/PriceTag" index="0"]
modulate = Color( 0.6, 0.584314, 0.521569, 1 )
position = Vector2( 21, 3 )
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="BG/ActionDialog/PriceTag" index="1"]
modulate = Color( 0.6, 0.584314, 0.521569, 1 )
margin_left = -5.0
margin_top = -2.0
margin_right = 25.0
margin_bottom = 12.0
text = "45"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceTag2" type="Sprite" parent="BG/ActionDialog" index="7"]
position = Vector2( 79, 40 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite" type="Sprite" parent="BG/ActionDialog/PriceTag2" index="0"]
modulate = Color( 0.145098, 0.145098, 0.133333, 1 )
position = Vector2( 21, 3 )
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="BG/ActionDialog/PriceTag2" index="1"]
modulate = Color( 0.145098, 0.145098, 0.133333, 1 )
margin_left = -5.0
margin_top = -2.0
margin_right = 25.0
margin_bottom = 12.0
text = "80"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceTag3" type="Sprite" parent="BG/ActionDialog" index="8"]
position = Vector2( 79, 59 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite" type="Sprite" parent="BG/ActionDialog/PriceTag3" index="0"]
modulate = Color( 0.145098, 0.145098, 0.133333, 1 )
position = Vector2( 21, 3 )
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="BG/ActionDialog/PriceTag3" index="1"]
modulate = Color( 0.145098, 0.145098, 0.133333, 1 )
margin_left = -5.0
margin_top = -2.0
margin_right = 25.0
margin_bottom = 12.0
text = "120"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BG/Choices/ClassActions" to="." method="_on_ClassActions_pressed"]
[connection signal="pressed" from="BG/Choices/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="BG/ActionDialog/Back" to="." method="_on_Back_pressed"]
